--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,21 @@
 h1 {
-    font-size: 30px;
-    font-family: Verdana;
+    font-size: 40px;
+    font-family: Arial;
+    text-align: center;
+}
+
+h3 {
+    font-size: 25px;
+    font-family: Times, serif;
+    text-align: center;
 }
 
 * {
     margin-top: 2em;
     margin-bottom: 2em;
-    margin-left: 1em;
-    margin-right: 1em;
-    background-color: rgb(255, 238, 231);
+    margin-left: 2.5em;
+    margin-right: 2.5em;
+    background-color: rgb(255, 245, 214);
 }
 
 img, li, h4 {
@@ -16,8 +23,22 @@ img, li, h4 {
     margin-bottom: 0.5em;
 }
 
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#purpose {
+    text-align:center;
+    font-size: 20px;
+}
+
 .chapters {
+    font-size: 30px;
     margin-bottom: 0em;
+    text-align: center;
+    text-decoration: underline;
 }
 
 .chapters:first-child {
@@ -27,7 +48,15 @@ img, li, h4 {
 ul {
     margin-top: 0em;
     margin-bottom: 0em;
+    margin-left: 0em;
+    list-style-type: none;
+    text-align:center;
 }
+
+li {
+    font-size: 18px;
+}
+
 
 a {
     text-decoration: none;
@@ -45,4 +74,22 @@ a:visited {
 
 a:hover {
     color: red;
+}
+
+p {
+    text-indent: 1.5em;
+    font-family: 'times new roman';
+    line-height: 1.5em;
+    font-size: 18px;
+}
+
+footer div p {
+    text-align: center;
+    padding-left: 1em;
+    text-indent: 0em;
+}
+
+footer div p a {
+    padding: 0;
+    margin: 0;
 }
